--- a/teaching.html
+++ b/teaching.html
@@ -123,12 +123,12 @@
         </tr>
         <tr>
           <td>Week 9</td>
-          <td>Paper Reading</td>
-          <td></td>
+          <td><a href="./files/Week9.pdf" target="_blank">graphics research using the Laplacian</a></td>
+          <td><a href="https://dl.acm.org/doi/abs/10.1145/3587421.3595439" target="_blank">the paper</a></td>
         </tr>
         <tr>
             <td>Week 10</td>
-            <td>Art Contest (opening speech: Cary Philips from ILM)</td>
+            <td>Art Contest (closing speech: Cary Philips from ILM)</td>
             <td></td>
         </tr>
     </table>
