--- a/teaching.html
+++ b/teaching.html
@@ -114,7 +114,7 @@
         <tr>
           <td>Week 7</td>
           <td>Lab</td>
-          <td></td>
+          <td>---</td>
         </tr>
         <tr>
           <td>Week 8</td>
@@ -128,8 +128,8 @@
         </tr>
         <tr>
             <td>Week 10</td>
-            <td>Art Contest (closing speech: Cary Philips from ILM)</td>
-            <td></td>
+            <td>Art Contest + guest lecture from <a href="https://www.aswf.io/bts/bts_cary_phillips/" target="_blank">Cary Philips</a> (ILM)</td>
+            <td><a href="http://fxphd.com" target="_blank">fxphd</a>, <a href="https://beforesandafters.com/" target="_blank">befores & afters</a>, <a href="https://www.youtube.com/watch?v=7ttG90raCNo" target="_blank">the movie rabbit hole</a></td>
         </tr>
     </table>
 
