--- a/new_students.html
+++ b/new_students.html
@@ -202,13 +202,13 @@
           <h4>Intuition is more important than implementation details</h4>
           <br>
 
-          <p>This is the most important teaching philosophy I got from my Ph.D. advisor prof. Misha Kazhdan. His memorable C++ intermediate programming course at Hopkins included a simple, clear explanation of segmentation faults: “If you ran into this error, nine out of nine times it’s related to memory. You are touching memories that’s not yours". Simple and clear. I’ll probably remember this lifetime. To elaborate the same concept, a bad teacher would just copy the Wikipedia definition “ In computing, a segmentation fault (often shortened to segfault) or access violation is a fault, or failure condition, raised by hardware with memory protection, notifying an operating system (OS) the software has attempted to access a restricted area of memory (a memory access violation). "</a> </p>
+          <p>This is the most important teaching philosophy of all. It applies to both theoretical and software courses. It is not surprising that theoretical courses emphasize intuitions. Therefore, I'd like to provide one example in the context of programming course. To elaborate the same concept segmentation fault, a less effective teacher would just copy the Wikipedia definition `` In computing, a segmentation fault (often shortened to segfault) or access violation is a fault, or failure condition, raised by hardware with memory protection, notifying an operating system (OS) the software has attempted to access a restricted area of memory (a memory access violation)." On the other hand, a much clearer explanation could go by:  ``If you ran into this error, nine out of nine times it's related to memory. You are touching memories that's not yours".</a> </p>
 
 	  <!-- <br> -->
           <br>
           <h4>Interacting with students effectively is nontrivial</h4>
           <br>
-          <p>This philosophy was again passed to me from my Ph.D. advisor Misha Kazhdan. I believe interaction with students is something sounds trivial but difficult to implement. Misha is such a good teacher, who would try to catch every single face that looks confused in the classroom and go after them. It is dangerous to say “Understood" in his classroom when he asks “Understand?". Admittedly, it was a bit intimidating at the beginning. But it has been very beneficial for students. That way, I stopped pretending a know-it-all, and learned more.</a> </p>
+          <p>Interaction with students is something sounds trivial but difficult to implement. It involves creating a safe environment for asking questions. It should be a big commitment as my student to say ``Understood" in my classroom when I check ``Understand?" (as I might ask them to explain). From my teaching and learning experiences, this approach has been very beneficial for students, because feeling safe to ask questions guarantees learning more.</a> </p>
 
           <br>
           <h4>Learning happens when coding happens</h4>
@@ -219,7 +219,7 @@
           <br>
           <h4>Less is more</h4>
           <br>
-          <p>This philosophy was passed to me from my father prof. Hongzhi Chen, amazing teacher in Electrical Engineering. I will keep in mind that not every single student in the classroom of Computer Graphics aims at becoming an expert in this narrower field or publishing SIGGRAPH papers. When planning my lessons, I contemplate which single concept I would like my students to retain if they could only remember one thing. For instance, in my rendition of Computer Graphics, the key takeaway from the entire lecture series would be the Laplacian. For my least motivated students, this serves as the baseline expectation. For those with a bit more drive, I strive to identify one enduring concept per lecture that they can commit to memory for a lifetime.</a> </p>
+          <p>Humbleness is essential for educators. I will keep in mind that not every single student in the classroom aims at becoming an expert or publishing ACM SIGGRAPH papers. When planning my lectures, I contemplate which single concept I would like my students to retain if they could only remember one thing. For instance, in my rendition of Computer Graphics, the key takeaway from the entire lecture series would be the Laplacian. For my least motivated students, this serves as the baseline expectation. For those with a bit more drive, I strive to identify one enduring concept per lecture that they can commit to memory for a lifetime.</a> </p>
 
 					<!-- <p>I am an enthusiast of images, surfaces, and volumes. I love my research. Computer Graphics is at the intersection of math, physics, and art. I cannot think of more exciting things to investigate than this. </p> 
           
