--- a/teaching.html
+++ b/teaching.html
@@ -89,7 +89,7 @@
         <tr>
             <td>Week 2</td>
             <td><a href="./files/Week2.pdf" target="_blank">Data</a></td>
-            <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a>, <a href="https://github.com/HeCraneChen/exploring_laplacian_graphics_course/tree/main/week2" target="_blank">Solution</a></td>
+            <td><a href="./files/DSCF7047.JPG" target="_blank">Pelican</a>,<a href="./files/DSCF5701.JPG" target="_blank">Lizard</a>,<a href="./files/Beetle.ply" target="_blank">Beetle</a>, <a href="./files/Rebel.ply" target="_blank">Rebel</a>, <a href="./files/HappyDragon.ply" target="_blank">HappyDragon</a>, <a href="https://www.cs.cmu.edu/~kmcrane/Projects/ModelRepository/" target="_blank">Ogre</a>, <a href="https://github.com/HeCraneChen/exploring_laplacian_graphics_course/tree/main/week2" target="_blank">Solution</a></td>
         </tr>
         <tr>
             <td>Week 3</td>
@@ -114,7 +114,7 @@
         <tr>
           <td>Week 7</td>
           <td>Lab</td>
-          <td>---</td>
+          <td>extra gears for art: <a href="https://github.com/HTDerekLiu/CubicStylization_Cpp" target="_blank">CubicStylization</a>, <a href="https://github.com/HeCraneChen/curvature-qslim-mesh-decimation" target="_blank">MeshSimplification</a>, <a href="https://github.com/sgsellan/swept-volumes" target="_blank">SweptVolume</a>; visualization tool: <a href="https://polyscope.run/py/" target="_blank">Polyscope</a></td>
         </tr>
         <tr>
           <td>Week 8</td>
@@ -128,12 +128,12 @@
         </tr>
         <tr>
             <td>Week 10</td>
-            <td>Art Contest + guest lecture from <a href="https://www.aswf.io/bts/bts_cary_phillips/" target="_blank">Cary Philips</a> (ILM)</td>
+            <td>art contest + talk by <a href="https://www.aswf.io/bts/bts_cary_phillips/" target="_blank">Cary Philips</a> (ILM), co-chatter: <a href="https://www.linkedin.com/in/hongyi-liu-2632201b7/" target="_blank">Hongyi Liu</a></td>
             <td><a href="http://fxphd.com" target="_blank">fxphd</a>, <a href="https://beforesandafters.com/" target="_blank">befores & afters</a>, <a href="https://www.youtube.com/watch?v=7ttG90raCNo" target="_blank">the movie rabbit hole</a></td>
         </tr>
     </table>
 
-<h2>Extra Gears for Art</h2>
+<!-- <h2>Extra Gears for Art</h2>
 <h4>Algorithms</h4> 
 
 <ul>
@@ -150,12 +150,29 @@
   <li><a href="./files/BigBuckBunny.ply" target="_blank">BigBuckBunny</a>
   <li><a href="https://www.cs.cmu.edu/~kmcrane/Projects/ModelRepository/" target="_blank">Ogre</a>
   <li>...... search any 3D models on line and be creative</a>
-</ul>
+</ul> -->
 
-<h4>Visualization Tool</h4> 
+<!-- <h4>Visualization Tool</h4> 
 <ul>
   <li>check out the doc of <a href="https://polyscope.run/py/" target="_blank">Polyscope</a>
-</ul>
+</ul> -->
+
+<h2>Gallery of Art Contest</h4> 
+<div class="col-md-2 hidden-sm hidden-xs">
+  <div style="display: inline-block;">
+    <img class="center-block" src="files/Ashley.png" alt="Description of your image" style="width: auto; height: 200px;"/>
+    <img class="center-block" src="files/Teddy.png" alt="Description of your image" style="width: auto; height: 200px;"/>
+    <img class="center-block" src="files/Simcha.png" alt="Description of your image" style="width: auto; height: 200px;"/>
+    <img class="center-block" src="files/Amy.png" alt="Description of your image" style="width: auto; height: 250px;"/>
+    <video class="center-block" style="width: auto; height: 250px;" controls autoplay loop>
+      <source src="files/Mirra.mov" type="video/mp4">
+      Your browser does not support the video tag.
+  </video>
+  <img class="center-block" src="files/Elysa.png" alt="Description of your image" style="width: auto; height: 250px;"/>
+    <!-- <img class="center-block" src="files/torus.png" alt="Description of your image" style="width: 120px; height: auto;"/>       
+    <img class="center-block" src="files/torus_knot.png" alt="Description of your image" style="width: 120px; height: auto;"/>
+    <img class="center-block" src="files/torus2.png" alt="Description of your image" style="width: 120px; height: auto;"/>   -->
+</div>
 
 
 <h2>Resources for Reference</h2>
