--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
                 <div style="margin-top:3%; text-align:justify;">    
        
-                      <p>My current focus is understanding the artistic foundations of computer graphics in Hollywood movie production. I research about new art tools at Industrial Light and Magic, Lucasfilm.</p>	
+                      <p>My current focus is understanding the artistic roots of computer graphics in Hollywood movie production. I research about new art tools at Industrial Light and Magic, Lucasfilm.</p>	
                         
                       <p>I love computer graphics! I'm always ready to talk about tessellation, curvature, or surface reconstruction. Don't hesitate to reach out if you want to discuss these topics. I find myself lucky to work in the most exciting field, at the best jobs, with the most amazing colleagues in this world. Computer graphics unites the disciplines of computing, mathematics, art, and physics, creating a captivating field of study. The dynamic nature of this intersection presents exciting opportunities for exploration and discovery. One cannot think of more exciting things to investigate than this.</p>	
 			
