--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			      
 		      <p>Computer graphics unites the disciplines of computing, mathematics, art, and physics, creating a captivating field of study. The dynamic nature of this intersection presents exciting opportunities for exploration and discovery. One cannot think of more exciting things to investigate than this.</p>	
 			
-                      <p>I teach CS4300/5310 Computer Graphics at Khoury College of Computer Sciences, Northeastern University. It's gonna be fun!</p>
+                      <p>I teach <a href="https://cranehechen.com/teaching.html">CS4300/5310 Computer Graphics</a> at Khoury College of Computer Sciences, Northeastern University. It's gonna be fun!</p>
                     
   
               <h2 id="software">Software</h2>
