--- a/teaching.html
+++ b/teaching.html
@@ -100,8 +100,8 @@
     <p>By the end of this course, you will be ready to</p>
     <ul>
       <li>Build graphics applications with C++.</li>
-      <li>Be ready to take more advanced graphics courses (e.g. Computational Geometry, Computer Animation, Geometry Processing, Discrete Differential Geometry, Neural Geometry Processing).</li>
       <li>Position yourself for jobs in gaming, entertainment, chip industry involving graphics, NASA or other national labs involving scientific visualization.</li>
+      <li>Take more advanced graphics courses (e.g. Computational Geometry, Computer Animation, Geometry Processing, Discrete Differential Geometry, Neural Geometry Processing).</li>
     </ul>
 
     <h2>Prerequisites</h2>
