--- a/teaching.html
+++ b/teaching.html
@@ -59,6 +59,9 @@
     <p>Abhijeet Chowdhury</p>
     <p>Email: <a href="mailto:chowdhury.ab@northeastern.edu">chowdhury.ab@northeastern.edu</a></p>
 
+    <h2>Meetings</h2>
+    <p>TF 2:00PM - 3:40PM</p>
+
     <!-- <h2>Syllabus</h2>
     <p><a href="./files/LaplacianCourse_Syllabus.pdf" target="_blank">Download Syllabus</a></p> -->
 
