--- a/teaching.html
+++ b/teaching.html
@@ -83,7 +83,7 @@
       <a href="https://www.appliedhoudini.com/">
         <!-- <img src="files/houdini_tutorial.png" alt="Applied Houdini" style="width: 13.35%; height: auto;"> -->
         <video autoplay loop muted playsinline style="width: 16.7%; height: auto;">
-          <source src="./files/houdini_tutorial.mp4" type="video/mp4">
+          <source src="./files/houdini1.mp4" type="video/mp4">
       </video>
         <!-- <img src="files/houdini_tutorial.png" alt="Applied Houdini" style="width: 13.35%; height: auto;"> -->
       </a>
@@ -148,135 +148,166 @@
       <li>You are encouraged to post questions/bugs on Piazza for open discussion.</li>
     </ul>
 
-    
+    <h2>Assignments</h2>
+    <ul>
+      <li>Assignment1: Beier-Neely morfing! (NOT A TYPO!!! People thought it is morphing, but <a href="https://www.disneyplus.com/series/light-magic/3OtlwhtW6Z7E" target="_blank">it is morfing when we invented this technology at ILM</a>.)</li>
+      <li>Assignment2: Peek the museum through a glass egg!</li>
+      <li>Assignment3: Does it tile?</li>
+      <li>Assignment4: Make the animal walk!</li>
+    </ul>
+ 
     <h2>Intended Course Roadmap</h2>
-    <video autoplay loop muted playsinline style="width: 30%; height: auto;">
-      <source src="./files/58336612022349336143728e1cb433a91ee2bd3000d3b42.mp4" type="video/mp4">
-   </video>
-    <table>
-        <tr>
-            <th>Week Num.</th>
-            <th>Lecture Slides</th>
-            <th>Other Helpful Resources</th>
-        </tr>
-        <tr>
-            <td>Week 1</td>
-            <td>Welcome</td>
-            <td></td>
-        </tr>
-        <tr>
-          <td>Week 2</td>
-          <td>Math Preliminary</td>
-          <td></td>
-        </tr>
-        <tr>
-            <td>Week 3</td>
-            <td>Software Tools Part 1 (Linux/Unix commands, CMake, basics of modern C++, Libigl, Polyscope)</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Week 4</td>
-            <td>"Morfing"</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Week 5</td>
-            <td>Spatial Transformations</td>
-            <td></td>
-        </tr>
-        <tr>
-          <td>Week 6</td>
-            <td>Software Tools Part 2 (How to write a GUI)</td>
-            <td></td>
-        </tr>
-        <tr>
-          <td>Week 7</td>
-          <td>Rendering Equation</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Week 8</td>
-          <td>Homography And Texture</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Week 9</td>
-          <td>Intro To Tiling Theory</td>
-          <td></td>
-        </tr>
-        <tr>
-            <td>Week 10</td>
-            <td>Intro To Geometry Part 1</td>
-            <td></td>
-        </tr>
-            <td>Week 11</td>
-            <td>Intro To Geometry Part 2</td>
-            <td></td>
-        </tr>
-            <td>Week 12</td>
-            <td>Intro To Animation</td>
-            <td></td>
-        </tr>
-            <td>Week 13</td>
-            <td>Intro To Neural Geometry Processing And Neural Simulation</td>
-            <td></td>
-        </tr>
-           <td>Week 14</td>
-            <td>PDE Strikes Back</td>
-            <td></td>
-        </tr>
-    </table>
-
-
-<!-- <h2>Gallery of Art Contest</h4> 
-<div class="col-md-2 hidden-sm hidden-xs">
-  <div style="display: inline-block;">
-    <img class="center-block" src="files/Ashley.png" alt="Description of your image" style="width: auto; height: 200px;"/>
-    <img class="center-block" src="files/Teddy.png" alt="Description of your image" style="width: auto; height: 200px;"/>
-    <img class="center-block" src="files/Simcha.png" alt="Description of your image" style="width: auto; height: 200px;"/>
-    <img class="center-block" src="files/Amy.png" alt="Description of your image" style="width: auto; height: 250px;"/>
-    <video class="center-block" style="width: auto; height: 250px;" controls autoplay loop>
-      <source src="files/Mirra.mov" type="video/mp4">
-      Your browser does not support the video tag.
-  </video>
-  <img class="center-block" src="files/Elysa.png" alt="Description of your image" style="width: auto; height: 250px;"/>
-</div> -->
-
-
-<!-- <h2>Resources for Reference</h2> -->
-
-
-<!-- <p><strong>Don’t need to freak out if you find the contents below quite advanced.</strong></p>
-
-<p><em>Note: Our course has no prerequisites, focuses on intuitions, so we are doing lots of handwavings here and there when it comes to math. But it would be beneficial to point you to resources mathematically rigorous in case you are interested in digging further in the future. Lectures I mentioned are the most relevant. In general, the whole playlists are good contents. The books are rigorous to another level. Those are super well-written textbooks though. You might find them not that hard to follow.</em></p> -->
-
-<!-- <h3>Optional lectures</h3>
-
-<ul>
-    <li>Shape Analysis, Justin Solomon, MIT
+<video autoplay loop muted playsinline style="width: 30%; height: auto;">
+  <source src="./files/58336612022349336143728e1cb433a91ee2bd3000d3b42.mp4" type="video/mp4">
+</video>
+<table style="width: 100%;">
+    <tr>
+        <th style="text-align: left;">Week Num.</th>
+        <th style="text-align: left;">Lecture Slides</th>
+        <th style="text-align: left;">Keywords</th>
+        <th style="text-align: left;">In-Class Coding Practice</th>
+        <th style="text-align: left;">Other Helpful Resources</th>
+    </tr>
+    <tr>
+        <td style="text-align: left;">Week 0</td>
+        <td style="text-align: left;">
+        <a href="https://www.icloud.com/keynote/037L7eCCg3M3m5-vu0cZ72IWg#Week0%5FIntro" target="_blank">Welcome</a>
+        </td>
+        <td style="text-align: left;">
         <ul>
-            <li>Lectures 12, Lecture14, Lecture14 Extra Content, Lecture 15 from this playlist: <a href="https://www.youtube.com/watch?v=VjyBp6PrvB4&list=PLQ3UicqQtfNtUcdTMLgKSTTOiEsCw2VBW" target="_blank">YouTube Playlist</a></li>
-        </ul>
-    </li>
-    <li>Discrete Differential Geometry, Keenan Crane, CMU
+        <li>What is Computer Graphics?</li>
+        </ul></td>
+        <td style="text-align: left;">N/A</td>
+        <td style="text-align: left;">
         <ul>
-            <li>Lecture 18 from this playlist: <a href="https://www.youtube.com/watch?v=mas-PUA3OvA&list=PL9_jI1bdZmz0hIrNCMQW1YmZysAiIYSSS&index=1" target="_blank">YouTube Playlist</a></li>
+          <li><a href="https://www.youtube.com/watch?v=w-cmMcMZoZ4&t=158s" target="_blank">Jensen-Zuck Talk at SIGGRAPH 2024</a></li>
+          <li><a href="https://www.youtube.com/watch?v=MdPXBnJWai8" target="_blank">Turing Award Lecture at SIGGRAPH 2022</a></li>
         </ul>
-    </li>
-    <li>A Quick Introduction to the Laplacian and Bilaplacian Through the Theory of PDEs, Oded Stein, USC: <a href="https://www.youtube.com/watch?v=LUcn9GzhFDA&t=271s" target="_blank">YouTube Video</a></li>
-</ul>
-
-<h3>Optional textbooks</h3>
-
-<ul>
-    <li>Botsch M, Kobbelt L, Pauly M, Alliez P, Lévy B., Polygon Mesh Processing, CRC Press (2010)</li>
-    <li>Mantredo Carmo, Differential Geometry of Curves and Surfaces (2016)
+       </td>
+    </tr>
+    <tr>
+      <td style="text-align: left;">Week 1</td>
+      <td style="text-align: left;">
+        <a href="https://www.icloud.com/keynote/0c14A1yklKyEOjkCBfBVAF-XQ#Week1%5FMathPreliminary" target="_blank">Math Preliminary</a>
+        </td>
+      <td style="text-align: left;"><ul>
+        <li>Vector</li>
+        <li>Vector Field, Scalar Field</li>
+        <li>Gradient, Divergence, Curl, Laplacian</li>
+        <li>Solving a Linear System</li>
+        <li>Poisson Surface Reconstruction</li>
+      </ul></td>
+      <td style="text-align: left;">
         <ul>
-            <li>Online access: <a href="http://www2.ing.unipi.it/griff/files/dC.pdf" target="_blank">PDF</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice101_visualizing_a_bug.py" target="_blank">Practice 101: Visualize a Bug</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice102_solve_a_sparse_linear_system.py" target="_blank">Practice 102: Solve a Linear System</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice103_visualize_the_gradient.py" target="_blank">Practice 103: Visualize Gradient</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice104_visualize_the_normal_of_a_point_cloud.py" target="_blank">Practice 104: Visualize the Normal of a Point Cloud</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice105_Compute%20and%20visualize_the_normal_of_a_surface_mesh.py" target="_blank">Practice 105: Compute and Visualize the Normal of a Surface Mesh</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice106_laplacian_smoothing_of_a%20_surface_mesh.py" target="_blank">Practice 106: Laplacian Smoothing of a Surface Mesh</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice107_poisson_surface_reconstruction.py" target="_blank">Practice 107: Poisson Surface Reconstruction</a></li>
         </ul>
-    </li>
-</ul> -->
+      </td>
+      <td style="text-align: left;"><ul>
+        <li><a href="https://www.cimat.mx/~gil/docencia/2013/topologia_variedades/spivak-calculus-on-manifolds.pdf" target="_blank">Spivak's Calculus on Manifolds</a></li>
+      </ul></td>
+    </tr>
+    <tr>
+        <td style="text-align: left;">Week 2</td>
+        <td style="text-align: left;">Software Tools Part 1</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+        <td style="text-align: left;">Week 3</td>
+        <td style="text-align: left;">"Morfing"</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+        <td style="text-align: left;">Week 4</td>
+        <td style="text-align: left;">Spatial Transformations</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+      <td style="text-align: left;">Week 5</td>
+        <td style="text-align: left;">Software Tools Part 2</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+      <td style="text-align: left;">Week 6</td>
+      <td style="text-align: left;">Rendering Equation</td>
+      <td style="text-align: left;"></td>
+      <td style="text-align: left;"></td>
+      <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+      <td style="text-align: left;">Week 7</td>
+      <td style="text-align: left;">Homography And Texture</td>
+      <td style="text-align: left;"></td>
+      <td style="text-align: left;"></td>
+      <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+      <td style="text-align: left;">Week 8</td>
+      <td style="text-align: left;">Intro To Tiling Theory</td>
+      <td style="text-align: left;"></td>
+      <td style="text-align: left;"></td>
+      <td style="text-align: left;"></td>
+    </tr>
+    <tr>
+        <td style="text-align: left;">Week 9</td>
+        <td style="text-align: left;">Intro To Geometry Part 1</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+        <td style="text-align: left;">Week 10</td>
+        <td style="text-align: left;">Intro To Geometry Part 2</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+        <td style="text-align: left;">Week 11</td>
+        <td style="text-align: left;">Intro To Animation</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+        <td style="text-align: left;">Week 12</td>
+        <td style="text-align: left;">Intro To Neural Geometry Processing And Neural Simulation</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+       <td style="text-align: left;">Week 13</td>
+        <td style="text-align: left;">PDE Strikes Back</td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+        <td style="text-align: left;"></td>
+    </tr>
+</table>
 
+<h2>Reference</h2>
+I did not grow the knowledge out of the ground. The knowledge did not fall out of the sky either. My own insights were injected, but I have also put existing things together for a lot of parts. In alphabetical order, I have stolen contents from:
+    <ul>
+      <li>Noam Aigerman. IFT6095: Neural Geometry Processing. University of Montreal.</li>
+      <li>Keenan Crane. 15-462/662: Computer Graphics. Carnegie Mellon University.</li>
+      <li>Doug L. James. CS 348C: Computer Graphics: Animation and Simulation. Stanford University.</li>
+      <li>Craig S. Kaplan. Introductory Tiling Theory for Computer Graphics. University of Waterloo.</li>
+      <li>Misha Kazhdan. EN.601.457/657: Computer Graphics. Johns Hopkins University.</li>
+      <li>Misha Kazhdan. EN.600.459/659 Intro to Computational Geometry. Johns Hopkins University.</li>
+      <li>Daniele Panozzo. CSCI-GA 2270-001: Computer Graphics. New York University.</li>
+      <li>Steve Seitz. CSE457: Computer Graphics: Graphics in 5 Minutes. University of Washington.</li>
+      <li>Mike Shah. CS4300/5310: Computer Graphics. Northeastern University.</li>
+      <li>Jeff Weeks. Topology and Geometry Games. Freelance Mathematician.</li>
+    </ul>
 
 </body>
 </html>
