--- a/teaching.html
+++ b/teaching.html
@@ -154,6 +154,7 @@
       <li>Assignment2: Peek the museum through a glass egg!</li>
       <li>Assignment3: Does it tile?</li>
       <li>Assignment4: Make the animal walk!</li>
+      <li>Assignment4 can be replaced by a final project.</li>
     </ul>
  
     <h2>Intended Course Roadmap</h2>
