--- a/teaching.html
+++ b/teaching.html
@@ -217,7 +217,11 @@
         <td style="text-align: left;">Week 2</td>
         <td style="text-align: left;">Software Tools Part 1</td>
         <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;">
+          <ul>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/tree/main/practice201_hello_cpp" target="_blank">Practice 201: Hello C++</a></li>
+        </ul>
+        </td>
         <td style="text-align: left;"></td>
     </tr>
     <tr>
