--- a/teaching.html
+++ b/teaching.html
@@ -216,11 +216,18 @@
     <tr>
         <td style="text-align: left;">Week 2</td>
         <td style="text-align: left;">Software Tools Part 1</td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><ul>
+        <li>CMake</li>
+        <li>Modern C++</li>
+        <li>C++ for Graphics in The Wild</li>
+      </ul></td>
         <td style="text-align: left;">
           <ul>
           <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/tree/main/practice201_hello_cpp" target="_blank">Practice 201: Hello C++</a></li>
-        </ul>
+          <li><a href="https://github.com/HeCraneChen/total-curvature-estimation" target="_blank">Practice 202: Total Curvature Calculator</a></li>
+          <li><a href="https://github.com/HTDerekLiu/CubicStylization_Cpp" target="_blank">Practice 203: Cubic Stylization</a></li>
+          <li><a href="https://github.com/sgsellan/swept-volumes" target="_blank">Practice 204: Swept Volumes</a></li>
+          </ul>
         </td>
         <td style="text-align: left;"></td>
     </tr>
