--- a/teaching.html
+++ b/teaching.html
@@ -215,7 +215,9 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 2</td>
-        <td style="text-align: left;">Software Tools Part 1</td>
+        <td style="text-align: left;">
+            <a href="https://www.icloud.com/keynote/0b4llVMWZanFwhl-YfCkGUqlA#Week2%5FSoftwareTools%5FPart1" target="_blank">Software Tools Part 1</a>
+        </td>
         <td style="text-align: left;"><ul>
         <li>CMake</li>
         <li>Modern C++</li>
