--- a/teaching.html
+++ b/teaching.html
@@ -231,7 +231,9 @@
           <li><a href="https://github.com/sgsellan/swept-volumes" target="_blank">Practice 204: Swept Volumes</a></li>
           </ul>
         </td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;">
+            <li><a href="https://en.cppreference.com/w/" target="_blank">CPP Reference</a></li>
+        </td>
     </tr>
     <tr>
         <td style="text-align: left;">Week 3</td>
