--- a/teaching.html
+++ b/teaching.html
@@ -178,7 +178,7 @@
         <ul>
         <li>What is Computer Graphics?</li>
         </ul></td>
-        <td style="text-align: left;">N/A</td>
+        <td style="text-align: left;"> <ul><li>N/A</li><ul></td>
         <td style="text-align: left;">
         <ul>
           <li><a href="https://www.youtube.com/watch?v=w-cmMcMZoZ4&t=158s" target="_blank">Jensen-Zuck Talk at SIGGRAPH 2024</a></li>
@@ -232,7 +232,9 @@
           </ul>
         </td>
         <td style="text-align: left;">
+            <ul>
             <li><a href="https://en.cppreference.com/w/" target="_blank">CPP Reference</a></li>
+            </ul>
         </td>
     </tr>
     <tr>
