--- a/teaching.html
+++ b/teaching.html
@@ -221,7 +221,7 @@
         <td style="text-align: left;"><ul>
         <li>CMake</li>
         <li>Modern C++</li>
-        <li>C++ for Graphics in The Wild</li>
+        <li>C++ in The Wild for Computer Graphics</li>
       </ul></td>
         <td style="text-align: left;">
           <ul>
