--- a/teaching.html
+++ b/teaching.html
@@ -240,8 +240,19 @@
     <tr>
         <td style="text-align: left;">Week 3</td>
         <td style="text-align: left;">"Morfing"</td>
-        <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;">
+        <ul>
+        <li>Image Acquisition Methods</li>
+        <li>Representations of Digital Images</li>
+        <li>Digital Half Toning</li>
+        <li>What is Diffusion?</li>
+        <li>Beier-Neeley Morfing</li>
+        </ul>
+        </td>
+        <td style="text-align: left;"><ul>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice301_half_toning.py" target="_blank">Practice 301: Digital Half Toning</a></li>
+          <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice302_vertical_edge_filter.py" target="_blank">Practice 302: Edge Detector</a></li>
+          </ul></td>
         <td style="text-align: left;"></td>
     </tr>
     <tr>
