--- a/teaching.html
+++ b/teaching.html
@@ -253,7 +253,11 @@
           <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice301_half_toning.py" target="_blank">Practice 301: Digital Half Toning</a></li>
           <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice302_vertical_edge_filter.py" target="_blank">Practice 302: Edge Detector</a></li>
           </ul></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;">
+            <ul>
+            <li><a href="./files/beier92.pdf" target="_blank">Feature-Based Image Metamorphosis</a></li>
+            </ul>
+        </td>
     </tr>
     <tr>
         <td style="text-align: left;">Week 4</td>
