--- a/teaching.html
+++ b/teaching.html
@@ -239,7 +239,7 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 3</td>
-        <td style="text-align: left;">"Morfing"</td>
+        <td style="text-align: left;"> <a href="https://www.icloud.com/keynote/07efE3VV489D8gS0b3ZkLK40Q#Week3%5FMorfing" target="_blank">Morfing</a></td>
         <td style="text-align: left;">
         <ul>
         <li>Image Acquisition Methods</li>
