--- a/teaching.html
+++ b/teaching.html
@@ -150,7 +150,7 @@
 
     <h2>Assignments</h2>
     <ul>
-      <li>Assignment1: Beier-Neely morfing! (NOT A TYPO!!! People thought it is morphing, but <a href="https://www.disneyplus.com/series/light-magic/3OtlwhtW6Z7E" target="_blank">it is morfing when we invented this technology at ILM</a>.)</li>
+      <li> <a href="./assignment1.html" target="_blank">Assignment1: Beier-Neely morfing!</a>(NOT A TYPO!!! People thought it is morphing, but <a href="https://www.disneyplus.com/series/light-magic/3OtlwhtW6Z7E" target="_blank">it is morfing when we invented this technology at ILM</a>.)</li>
       <li>Assignment2: Peek the museum through a glass egg!</li>
       <li>Assignment3: Does it tile?</li>
       <li>Assignment4: Make the animal walk!</li>
