--- a/teaching.html
+++ b/teaching.html
@@ -261,8 +261,16 @@
     </tr>
     <tr>
         <td style="text-align: left;">Week 4</td>
-        <td style="text-align: left;">Spatial Transformations</td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/02edLuLYSkDfz1rmaZKoeLFMQ#Week4%5FSpatialTransformations" target="_blank">Spatial Transformations</a></td>
+        <td style="text-align: left;">
+        <ul>
+        <li>Transformation Matrices</li>
+        <li>Homogeneous Coordinates</li>
+        <li>Interpolating Transformations</li>
+        <li>SLERP</li>
+        <li>Linear Blend Skinning</li>
+        </ul>        
+        </td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
     </tr>
