--- a/teaching.html
+++ b/teaching.html
@@ -271,19 +271,32 @@
         <li>Linear Blend Skinning</li>
         </ul>        
         </td>
-        <td style="text-align: left;"></td>
-        <td style="text-align: left;"></td>
+        <td style="text-align: left;">
+          <ul>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice401_visualizing_3d_rotation.py" target="_blank">Practice 401: Visualizing 3D Rotation</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice402_visualizing_3d_translation.py" target="_blank">Practice 402: Visualizing 3D Translation</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice403_visualizing_3d_scale.py" target="_blank">Practice 403: Visualizing 3D Scaling</a></li>
+            <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice404_visualizing_3d_shear.py" target="_blank">Practice 404: Visualizing 3D Shearing</a></li>
+            <li><a href="https://github.com/libigl/libigl/tree/main/tutorial/403_BoundedBiharmonicWeights" target="_blank">Practice 405: Interpolating Transformations (Linear Blend Skinning)</a></li>
+           </ul>
+        </td>
+        <td style="text-align: left;">
+          <ul>
+            <li><a href="./files/Quaternions, Interpolation and Animation.pdf" target="_blank">Quaternions, Interpolation and Animation</a></li>
+            <li><a href="./files/A Mathematical Introduction to Robotic Manipulation.pdf" target="_blank">A Mathematical Introduction to Robotic Manipulation</a></li>
+          </ul>
+        </td>
     </tr>
     <tr>
       <td style="text-align: left;">Week 5</td>
-        <td style="text-align: left;">Software Tools Part 2</td>
+        <td style="text-align: left;">Rendering Equation</td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
     </tr>
     <tr>
       <td style="text-align: left;">Week 6</td>
-      <td style="text-align: left;">Rendering Equation</td>
+      <td style="text-align: left;">Software Tools Part 2</td>
       <td style="text-align: left;"></td>
       <td style="text-align: left;"></td>
       <td style="text-align: left;"></td>
