--- a/teaching.html
+++ b/teaching.html
@@ -282,7 +282,7 @@
         </td>
         <td style="text-align: left;">
           <ul>
-            <li><a href="./files/Quaternions, Interpolation and Animation.pdf" target="_blank">Quaternions, Interpolation and Animation</a></li>
+            <li><a href="./files/p245-shoemake.pdf" target="_blank">Animating Rotation with Quaternion Curves (SIGGRAPH 1995)</a></li>
             <li><a href="./files/A Mathematical Introduction to Robotic Manipulation.pdf" target="_blank">A Mathematical Introduction to Robotic Manipulation</a></li>
           </ul>
         </td>
