--- a/teaching.html
+++ b/teaching.html
@@ -255,7 +255,7 @@
           </ul></td>
         <td style="text-align: left;">
             <ul>
-            <li><a href="./files/beier92.pdf" target="_blank">Feature-Based Image Metamorphosis</a></li>
+            <li><a href="./files/beier92.pdf" target="_blank">Feature-Based Image Metamorphosis (SIGGRAPH '92)</a></li>
             </ul>
         </td>
     </tr>
@@ -277,12 +277,12 @@
             <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice402_visualizing_3d_translation.py" target="_blank">Practice 402: Visualizing 3D Translation</a></li>
             <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice403_visualizing_3d_scale.py" target="_blank">Practice 403: Visualizing 3D Scaling</a></li>
             <li><a href="https://github.com/HeCraneChen/computer_graphics_coding_practice/blob/main/practice404_visualizing_3d_shear.py" target="_blank">Practice 404: Visualizing 3D Shearing</a></li>
-            <li><a href="https://github.com/libigl/libigl/tree/main/tutorial/403_BoundedBiharmonicWeights" target="_blank">Practice 405: Interpolating Transformations (Linear Blend Skinning)</a></li>
+            <li><a href="https://github.com/libigl/libigl/tree/main/tutorial/403_BoundedBiharmonicWeights" target="_blank">Practice 405: Linear Blend Skinning</a></li>
            </ul>
         </td>
         <td style="text-align: left;">
           <ul>
-            <li><a href="./files/p245-shoemake.pdf" target="_blank">Animating Rotation with Quaternion Curves (SIGGRAPH 1995)</a></li>
+            <li><a href="./files/p245-shoemake.pdf" target="_blank">Animating Rotation with Quaternion Curves (SIGGRAPH '85)</a></li>
             <li><a href="./files/A Mathematical Introduction to Robotic Manipulation.pdf" target="_blank">A Mathematical Introduction to Robotic Manipulation</a></li>
           </ul>
         </td>
