--- a/teaching.html
+++ b/teaching.html
@@ -288,19 +288,23 @@
         </td>
     </tr>
     <tr>
-      <td style="text-align: left;">Week 5</td>
-        <td style="text-align: left;">Rendering Equation</td>
-        <td style="text-align: left;"></td>
+      <td style="text-align: left;">Week 5,6</td>
+        <td style="text-align: left;"><a href="https://www.icloud.com/keynote/058DtH5Twl_eVmhqT7BnOx7mA#Week5%2C6%5FRendering" target="_blank">Rendering Equation</a></td>
+<!--         <td style="text-align: left;">Rendering Equation</td> -->
+        <td style="text-align: left;"><ul>
+        <li>Direct Illumination</li>
+        <li>Indirect Illuminatio</li>
+        </ul>  </td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
     </tr>
-    <tr>
+<!--     <tr>
       <td style="text-align: left;">Week 6</td>
       <td style="text-align: left;">Software Tools Part 2</td>
       <td style="text-align: left;"></td>
       <td style="text-align: left;"></td>
       <td style="text-align: left;"></td>
-    </tr>
+    </tr> -->
     <tr>
       <td style="text-align: left;">Week 7</td>
       <td style="text-align: left;">Homography And Texture</td>
