--- a/teaching.html
+++ b/teaching.html
@@ -293,7 +293,7 @@
 <!--         <td style="text-align: left;">Rendering Equation</td> -->
         <td style="text-align: left;"><ul>
         <li>Direct Illumination</li>
-        <li>Indirect Illuminatio</li>
+        <li>Indirect Illumination</li>
         </ul>  </td>
         <td style="text-align: left;"></td>
         <td style="text-align: left;"></td>
